src/test/resources/30/single/xhtml/valid/id-ref-not-ncname.xhtml
<!DOCTYPE html>	 
<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
  <head>
    <title>Test</title>
    <meta charset="UTF-8" />
  </head>
  <body>
    <h1>Test</h1>
    <section aria-labelledby="1label">
      <span id="1label">label</span>
    </section>
  </body>
</html>
