src/test/resources/30/single/xhtml/invalid/edupub-heading-imgnoalt.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE html>
<html xmlns="http://www.w3.org/1999/xhtml" xmlns:epub="http://www.idpf.org/2007/ops">
	<head>
		<title>EDUPUB headings test</title>
	</head>
	<body>
		<section>
			<h1>
				<img alt="" src="./img.png" />
			</h1>
			<p>Lorem Ispum Dolor...</p>
		</section>
	</body>
</html>
